--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.24.3",
+    "country-state-city": "^3.2.1",
     "react": "^19.0.0",
+    "react-country-state-city": "^1.1.11",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
